Follow-up from "basetsmux: Fix language crash when ts_pad->stream is NULL"
The following discussion from !4785 (merged) should be addressed:
-
@heftig started a discussion: (+1 comment) I just noticed this says "Matroska". Was this copied from
matroskamux
?I think MPEG-TS would prefer the ISO 639-2T codes.